--- a/StudentApp/templates/StudentLoginPage.html
+++ b/StudentApp/templates/StudentLoginPage.html
@@ -1,100 +1,85 @@
 <!doctype html>
 {% load static %}
 <html lang="en">
-  <head><script>(function(w,i,g){w[g]=w[g]||[];if(typeof w[g].push=='function')w[g].push(i)})
-(window,'G-SEKJ4E9T4H','google_tags_first_party');</script><script async src="/s9cc/"></script>
-			<script>
-				window.dataLayer = window.dataLayer || [];
-				function gtag(){dataLayer.push(arguments);}
-				gtag('js', new Date());
-				gtag('set', 'developer_id.dYzg1YT', true);
-				gtag('config', 'G-SEKJ4E9T4H');
-			</script>
 
-    <!-- Required meta tags -->
+<head>
+    <!-- META -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <!-- FONTS -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
+    <!-- ICONS + CSS -->
+    <link rel="stylesheet" href="{% static 'fonts/icomoon/style.css' %}">
+    <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <title>STRACK | Student Login</title>
+</head>
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+<body>
 
-    <!-- Style -->
-    <link rel="stylesheet" href="css/style.css">
+    <div class="content">
+        <div class="container">
+            <div class="row">
 
-    <title>Login #7</title>
-  </head>
-  <body>
+                <!-- LEFT IMAGE -->
+                <div class="col-md-6">
+                    <img src="{% static 'images/undraw_remotely_2j6y.svg' %}" alt="Image" class="img-fluid">
+                </div>
 
+                <!-- RIGHT LOGIN FORM -->
+                <div class="col-md-6 contents">
+                    <div class="row justify-content-center">
+                        <div class="col-md-8">
 
+                            <div class="mb-4 text-center">
+                                <h3>Student Login</h3>
+                                <p class="mb-4">Access your STRACK dashboard securely.</p>
+                            </div>
 
-  <div class="content">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-6">
-          <img src="images/undraw_remotely_2j6y.svg" alt="Image" class="img-fluid">
-        </div>
-        <div class="col-md-6 contents">
-          <div class="row justify-content-center">
-            <div class="col-md-8">
-              <div class="mb-4">
-              <h3>Sign In</h3>
-              <p class="mb-4">Lorem ipsum dolor sit amet elit. Sapiente sit aut eos consectetur adipisicing.</p>
+                            <form action="" method="post">
+                                {% csrf_token %}
+
+                                <!-- REGISTRATION ID -->
+                                <div class="form-group first">
+                                    <label for="regid">Registration ID</label>
+                                    <input type="text"
+                                           class="form-control"
+                                           id="regid"
+                                           name="regid"
+                                           placeholder="Enter your Registration ID"
+                                           required>
+                                </div>
+
+                                <!-- PASSWORD -->
+                                <div class="form-group mb-4">
+                                    <label for="password">Password</label>
+                                    <input type="password"
+                                           class="form-control"
+                                           id="password"
+                                           name="password"
+                                           placeholder="Enter your Password"
+                                           required>
+                                </div>
+
+                                <!-- LOGIN BUTTON -->
+                                <input type="submit"
+                                       value="Log In"
+                                       class="btn btn-block btn-primary">
+
+                            </form>
+
+                        </div>
+                    </div>
+
+                </div>
+
             </div>
-            <form action="#" method="post">
-              <div class="form-group first">
-                <label for="username">Username</label>
-                <input type="text" class="form-control" id="username">
-
-              </div>
-              <div class="form-group last mb-4">
-                <label for="password">Password</label>
-                <input type="password" class="form-control" id="password">
-
-              </div>
-
-              <div class="d-flex mb-5 align-items-center">
-                <label class="control control--checkbox mb-0"><span class="caption">Remember me</span>
-                  <input type="checkbox" checked="checked"/>
-                  <div class="control__indicator"></div>
-                </label>
-                <span class="ml-auto"><a href="#" class="forgot-pass">Forgot Password</a></span>
-              </div>
-
-              <input type="submit" value="Log In" class="btn btn-block btn-primary">
-
-              <span class="d-block text-left my-4 text-muted">&mdash; or login with &mdash;</span>
-
-              <div class="social-login">
-                <a href="#" class="facebook">
-                  <span class="icon-facebook mr-3"></span>
-                </a>
-                <a href="#" class="twitter">
-                  <span class="icon-twitter mr-3"></span>
-                </a>
-                <a href="#" class="google">
-                  <span class="icon-google mr-3"></span>
-                </a>
-              </div>
-            </form>
-            </div>
-          </div>
-
         </div>
-
-      </div>
     </div>
-  </div>
 
-
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/main.js"></script>
-  <script defer src="https://static.cloudflareinsights.com/beacon.min.js/vcd15cbe7772f49c399c6a5babf22c1241717689176015" integrity="sha512-ZpsOmlRQV6y907TI0dKBHq9Md29nnaEIPlkf84rnaERnq6zvWvPUqr2ft8M1aS28oN72PdrCzSjY4U6VaAw1EQ==" data-cf-beacon='{"version":"2024.11.0","token":"cd0b4b3a733644fc843ef0b185f98241","server_timing":{"name":{"cfCacheStatus":true,"cfEdge":true,"cfExtPri":true,"cfL4":true,"cfOrigin":true,"cfSpeedBrain":true},"location_startswith":null}}' crossorigin="anonymous"></script>
 </body>
+
 </html>
